style.css
/* ... */
.s-icons a[href*="twitter.com"]::before { content: '\f099'; font-family: 'Font Awesome 5 Brands'; }
.s-icons a[href*="vimeo.com"]::before { content: '\f27d'; font-family: 'Font Awesome 5 Brands'; }
.s-icons a[href*="wordpress.org"]::before,
.s-icons a[href*="wordpress.com"]::before { content: '\f411'; font-family: 'Font Awesome 5 Brands'; }
.s-icons a[href*="youtube.com"]::before { content: '\f167'; font-family: 'Font Awesome 5 Brands'; }
.s-icons a[href*="unsplash.com"]::before { content: '\f030'; font-family: 'Font Awesome 5'; }


/* Cover Modals ------------------------------ */

.cover-modal {
	display: none;
	-ms-overflow-style: none;
	overflow: -moz-scrollbars-none;
}

.cover-modal::-webkit-scrollbar { 
	display: none !important;
}

.cover-modal.show-modal {
	display: block;
}


/* Loading Indicator ------------------------- */

.loader {
	animation: spin 1.4s linear infinite;
	border-radius: 50%;
	border-style: solid;
	border-width: .5rem;
    height: 5rem;
	margin: auto;
    width: 5rem;
}

#pagination .loader {
	border-top-color: currentColor;
}


/* Animations ------------------------------- */

@keyframes spin {
    0% { 	transform: rotate( 0deg ); }
    100% { 	transform: rotate( 360deg ); }
}

@keyframes pop {
	0% { 	transform: scale( 1 ); }
	50% { 	transform: scale( 1.25 ); }
	100% { 	transform: scale( 1 ); }
}

@keyframes popIn {
	0% { 	transform: scale( 0.3 ); opacity: 0; }
	70% { 	transform: scale( 1.1 ); opacity: 1; }
	100% { 	transform: scale( 1.0 ); }
}


/* -------------------------------------------------------------------------------- */
/*	4.	Site Header
/* -------------------------------------------------------------------------------- */


#site-header {
	background: transparent;
	margin-bottom: 5rem;
}

.header-inner {
	align-items: center;
	background: transparent;
	display: flex;
	min-height: 8rem;
	position: relative;
	transition: none;
}

.overlay-header .header-inner {
	color: #fff;
	z-index: 1;
}

.header-inner.is-sticky {
	background: #fff;
}

.header-inner .section-inner {
	align-items: center;
	display: flex;
	justify-content: space-between;
}

.header-titles {
	align-items: baseline;
	display: flex;
	flex-wrap: wrap;
	justify-content: flex-start;
	margin: 0 0 0 -2.5rem;
}

.wp-custom-logo .header-titles {
	align-items: center;
}

.site-title,
.site-logo {
	margin: 0 0 0 2.5rem;
}

.site-title {
	font-size: 2.2rem;
	line-height: 1;
}

.overlay-header .site-title {
	color: inherit;
}

.site-title a {
	color: inherit;
	display: block;
	text-decoration: none;
}

.site-logo a,
.site-logo img {
	display: block;
}

.site-logo img {
	max-height: 6rem;
	width: auto;
}

.site-description {
	display: none;
	margin: 0 0 0 2.5rem;
	transition: all .15s linear;
}


/* Sticky Header ----------------------------- */

.header-inner.is-sticky {
	box-shadow: 0 0 1rem rgba( 0, 0, 0, 0.10 );
	position: fixed;
		left: 0;
		right: 0;
		top: 0;
	transition: box-shadow .2s linear, background-color .2s linear;
	z-index: 5;
}

.showing-menu-modal .header-inner.is-sticky {
	box-shadow: none;
}


/* Overlay Header ---------------------------- */

.overlay-header #site-header {
	margin: 0;
	position: absolute;
		left: 0;
		right: 0;
		top: 0;
}

.overlay-header:not(.showing-menu-modal):not(.overlay-header-has-text-color) .header-inner:not(.is-sticky) {
	color: #fff;
}


/* Header Navigation ------------------------- */

.header-navigation-wrapper {
	align-items: center;
	display: flex;
	justify-content: flex-end;
}

/* Header Toggles ---------------------------- */

.header-toggles {
	display: flex;
	flex-shrink: 0;
	justify-content: flex-end;
	margin: 0 -1.25rem 0 2rem;
	overflow: hidden;
}

.header-toggles .toggle {
	align-items: center;
	display: flex;
	height: 8rem;
	justify-content: flex-end;
	padding: 0 1.25rem;
	position: relative;
	text-decoration: none;
}

.header-toggles .toggle:hover,
.header-toggles .toggle:focus {
	outline: none;
	text-decoration: underline;
}

.header-toggles .toggle path {
	fill: currentColor;
}

.header-toggles .toggle-text {
	display: none;
	font-size: 1.6rem;
	font-weight: 500;
	margin: 0 1.5rem 0 0;
	white-space: nowrap;
}

.header-toggles .toggle:not(.active) .hide { display: none; }
.header-toggles .toggle.active .show { display: none; }

/* Search Toggle ----------------------------- */

.search-toggle svg {
	height: 1.8rem;
	width: 1.8rem;
}

/* Navigation Toggle ------------------------- */

.nav-toggle {
	width: auto;
}

.nav-toggle .bars {
	height: 1.4rem;
	position: relative;
	width: 2rem;
}

.nav-toggle .bar {
	background: currentColor;
	display: block;
	height: .18rem;
	position: absolute;
		right: 0;
		top: 50%;
	transition: transform 0.2s ease-in, opacity 0s ease-out 0.2s, margin 0.2s ease-out 0.2s;
	width: 100%;
}

.nav-toggle .bar:nth-child(1) { margin-top: -.6rem; }
.nav-toggle .bar:nth-child(3) { margin-top: 0.6rem; }

.nav-toggle.active .bar {
	transition: margin 0.2s ease-in, opacity 0s ease-in 0.2s, transform 0.2s ease-out 0.25s;
}

.nav-toggle.active .bar:nth-child(1) {
	margin-top: 0;
	transform: rotate( 45deg );
}

.nav-toggle.active .bar:nth-child(2) {
	opacity: 0;
}

.nav-toggle.active .bar:nth-child(3) {
	margin-top: 0;
	transform: rotate( -45deg );
}

/* Main Menu Alt ----------------------------- */

.main-menu-alt-container {
	display: none;
	margin-left: 6rem;
}

ul.main-menu-alt {
	display: flex;
	flex-wrap: wrap;
	justify-content: flex-end;
	margin: -1.5rem 0 0 -3rem;
}

.main-menu-alt li {
	font-size: inherit;
	line-height: 1.25;
	position: relative;
}

.main-menu-alt > li {
	margin: 1.5rem 0 0 3rem;
}

.main-menu-alt > li.menu-item-has-children > .link-icon-wrapper {
	align-items: center;
	display: flex;
	white-space: nowrap;
}

.main-menu-alt .link-icon-wrapper svg {
	content: "↓";
	display: block;
	height: .8rem;
	margin-left: 1rem;
	width: 1.3rem;
}

.main-menu-alt a {
	color: inherit;
	display: block;
	line-height: 1;
	text-decoration: none;
}
/* ... */

